test/ui/tests/name-resolution/exposure/reach-not-a-module.stderr
error[E022]: binding `Void` is not a module
 --> ${TEST_FOLDER}/name-resolution/exposure/reach-not-a-module.lushui:3:10
  |
3 | @(public Void) data Empty: Type of
  |          ^^^^
  |

error[E021]: binding `xxx` is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/exposure/reach-not-a-module.lushui:8:18
  |
8 | imposter: Hunk = xxx ;;; Hunk.hunk
  |                  ^^^
  |

error[E022]: binding `imposter` is not a module
  --> ${TEST_FOLDER}/name-resolution/exposure/reach-not-a-module.lushui:10:10
   |
10 | @(public imposter) data Void: Type of
   |          ^^^^^^^^
   |

error: aborting due to 3 previous errors

